fixed the horizontal scrolling issue

--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,7 @@ html {
     
 }
 
-#bio-frame {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
+
 
 #bio-text {
     
@@ -31,8 +27,8 @@ html {
 #frontpage {
     
     position: absolute;
-    height: 150%;
     
+    max-width:100%;
     z-index: 0;
     
    
